syntax = "proto3";

package auction;
option go_package = "https://github.com/suvihanninen/DistributedAuctionSystem;auction";


service Auction {
    rpc Bid (SetBid) returns (AckBid) {}
    rpc Result (GetResult) returns (ReturnResult) {}
    rpc GetHeartBeat(Request)returns (BeatAck){}
    rpc UpdateBid(SetBid) returns (AckBid){}
}

message Request {
    string message = 1;
}

message BeatAck {
    string port = 1;

}

message SetBid {
    int32 amount = 1;
    string highestBidderId = 2;
}

message AckBid {
    string acknowledgement = 1; //success, fail, exception
}

message GetResult {
   
}

message ReturnResult {
    int32 outcome = 1;
    string message = 2;
    string highestBidderId = 3;
}